--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "electron"
   ],
   "dependencies": {
+    "app-module-path": "^1.0.5",
     "configstore": "^1.4.0",
     "electron-debug": "^0.5.0",
     "gulp": "^3.9.0",
     "jquery": "^2.1.4",
     "mqtt": "^1.6.0",
+    "mqtt-controls": "0.0.4",
     "nconf": "^0.8.2",
     "photon": "git+https://github.com/connors/photon.git",
     "simpler-config": "0.0.4"
@@ -42,7 +44,6 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-node5": "^10.0.0",
     "electron-connect": "^0.3.3",
     "electron-packager": "^5.0.0",
     "electron-prebuilt": "^0.35.0",
